--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.21",
     "@types/react": "^18.0.30",
     "@types/react-dom": "^18.0.11",
+    "@types/react-tagcloud": "^1.1.7",
     "@types/recharts": "^1.8.24",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
