--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-tagcloud": "^2.3.1",
     "recharts": "^2.5.0",
