--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.10.0",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "jest": "^27.5.1"
   }
