--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-tagcloud": "^1.1.7",
     "@types/recharts": "^1.8.24",
     "react": "^18.2.0",
+    "react-d3-cloud": "^1.0.6",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
