--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.3",
-    "@types/node": "^16.18.21",
-    "@types/react": "^18.0.30",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-icons": "^3.0.0",
-    "@types/recharts": "^1.8.24",
+    "axios": "^1.4.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.3.4",
     "react": "^18.2.0",
     "react-d3-cloud": "^1.0.6",
     "react-datepicker": "^4.11.0",
@@ -19,9 +17,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
-    "styled-components": "^5.3.9",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,10 +44,18 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^16.18.21",
+    "@types/react": "^18.0.30",
     "@types/react-datepicker": "^4.10.0",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-icons": "^3.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "@types/recharts": "^1.8.24",
     "@types/styled-components": "^5.1.26",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "nodemon": "^3.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   }
 }
