--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.4",
     "react": "^18.2.0",
