--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-d3-cloud": "^1.0.6",
     "react-datepicker": "^4.11.0",
