--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "kakaotalk-stats",
+  "version": "0.2.5",
   "private": true,
+  "homepage": "https://leesj.me/kakaotalk-stats",
   "proxy": "http://localhost:3000",
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.3",
-    "axios": "^1.4.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-d3-cloud": "^1.0.6",
